# starcrat2-ai

./: .gitignore  .gitlab-ci.yml  BotConfig.txt  CMakeLists.txt  README.md
boost-python/lib_linux/: libboost_numpy36.so.1.68.0  libboost_python36.so.1.68.0
cmake/: FindSC2Api.cmake
s2client-api/include/google/protobuf/: any.pb.cc  any.pb.h  api.pb.cc  api.pb.h  arena.cc  arena.h  arena_unittest.cc  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor_unittest.cc  duration.pb.cc  duration.pb.h  dynamic_message.cc  empty.pb.cc  empty.pb.h  extension_set.cc  extension_set.h  extension_set_heavy.cc  extension_set_unittest.cc  field_mask.pb.cc  field_mask.pb.h  generated_message_reflection.cc  generated_message_util.cc  generated_message_util.h  map.h  map_entry.h  map_entry_lite.h  map_type_handler.h  message.cc  message.h  message_lite.cc  message_lite.h  reflection.h  repeated_field.h  repeated_field_reflection.h  source_context.pb.cc  source_context.pb.h  struct.pb.cc  (+15 more)
s2client-api/include/google/protobuf/compiler/: command_line_interface.cc  command_line_interface_unittest.cc  main.cc  parser.cc  plugin.pb.cc  plugin.pb.h
s2client-api/include/google/protobuf/compiler/cpp/: cpp_enum.cc  cpp_enum_field.cc  cpp_file.cc  cpp_map_field.cc  cpp_message.cc  cpp_message.h  cpp_message_field.cc
s2client-api/include/google/protobuf/compiler/csharp/: csharp_enum.cc
s2client-api/include/google/protobuf/compiler/java/: java_file.cc  java_map_field.cc  java_map_field_lite.cc  java_message.cc  java_message_builder.cc  java_message_field.cc  java_message_lite.cc  java_service.cc  java_service.h  java_shared_code_generator.cc  java_string_field.cc
s2client-api/include/google/protobuf/compiler/js/: js_generator.cc
s2client-api/include/google/protobuf/compiler/objectivec/: objectivec_field.cc  objectivec_file.cc  objectivec_file.h  objectivec_generator.cc  objectivec_helpers.cc  objectivec_helpers.h  objectivec_message.cc  objectivec_oneof.cc
s2client-api/include/google/protobuf/compiler/python/: python_generator.cc
s2client-api/include/google/protobuf/compiler/ruby/: ruby_generator_unittest.cc
s2client-api/include/google/protobuf/io/: coded_stream.cc  coded_stream.h
s2client-api/include/google/protobuf/stubs/: common.h  port.h
s2client-api/include/google/protobuf/util/: field_mask_util.cc  field_mask_util.h  json_util_test.cc  message_differencer.cc  message_differencer.h
s2client-api/include/google/protobuf/util/internal/: datapiece.cc  datapiece.h  default_value_objectwriter.cc  proto_writer.cc  proto_writer.h  protostream_objectsource.cc  protostream_objectsource.h  protostream_objectwriter.cc  protostream_objectwriter.h  protostream_objectwriter_test.cc  utility.cc  utility.h
s2client-api/include/s2clientprotocol/: raw.pb.cc  raw.pb.h  sc2api.pb.cc  sc2api.pb.h  spatial.pb.cc  spatial.pb.h
s2client-api/include/sc2api/: sc2_action.h  sc2_agent.h  sc2_api.h  sc2_args.h  sc2_client.h  sc2_common.h  sc2_connection.h  sc2_control_interfaces.h  sc2_coordinator.h  sc2_data.h  sc2_game_settings.h  sc2_gametypes.h  sc2_interfaces.h  sc2_map_info.h  sc2_proto_interface.h  sc2_proto_to_pods.h  sc2_replay_observer.h  sc2_score.h  sc2_server.h  sc2_typeenums.h  sc2_types.h  sc2_unit.h
s2client-api/include/sc2lib/: sc2_lib.h  sc2_search.h  sc2_utils.h
s2client-api/include/sc2renderer/: sc2_renderer.h
s2client-api/include/sc2utils/: sc2_arg_parser.h  sc2_manage_process.h  sc2_property_reader.h  sc2_scan_directory.h  sc2_simple_serialization.h
s2client-api/lib_win32/: civetweb.lib  sc2api.lib  sc2lib.lib  sc2libd.lib  sc2renderer.lib  sc2rendererd.lib  sc2utils.lib
src/: BaseLocation.cpp  BaseLocationManager.h  BotAssert.cpp  BuildOrderQueue.cpp  Building.cpp  Building.h  BuildingManager.cpp  BuildingPlacer.cpp  CCBot.cpp  CCBot.h  CMakeLists.txt  CombatCommander.cpp  CombatCommander.h  Communicate.h  GameCommander.cpp  MapTools.cpp  MapTools.h  MeleeManager.cpp  MetaTypeEnum.cpp  MetaTypeEnum.h  MicroMachine.cpp  MicroMachine.h  MicroManager.cpp  ProductionManager.cpp  ProductionManager.h  PythonObjects.cpp  RangedManager.cpp  Region.cpp  Region.h  Squad.cpp  Squad.h  StackWalker.cpp  StrategyManager.cpp  StrategyManager.h  TechTree.cpp  TryCreateResults.cpp  TryCreateResults.h  Unit.cpp  Unit.h  UnitInfoManager.cpp  (+12 more)
src/script/: main.py  run.sh  upgrades.py
